test/types/records/split-init/split-init-param-from-var.good
split-init-param-from-var.chpl:1: In function 'main':
split-init-param-from-var.chpl:4: error: Initializing parameter 'p' to value not known at compile time
