test/types/records/split-init/split-init-param-from-var.chpl
proc main() {
  var x:int;
  param p;
  p = x;
}
